# movie_genres

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
config/: paths.py
data/: genres.csv
model/: eda.ipynb
notebooks/: eda.ipynb
src/: preprocessing.py
