[tool.poetry]
name = "movie-genres"
version = "0.1.0"
description = ""
authors = ["Edward Kunkel <edward.pk94@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_genres"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
nltk = "^3.8"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
